--- a/example/index.html
+++ b/example/index.html
@@ -15,17 +15,67 @@
 
   <script src="ClassNameMixin.js"></script>
 
+  <style>
+    .example-component {
+      background-color: dodgerblue;
+      font-family: Century Gothic;
+      font-style: italic;
+      padding: 5px;
+      color: white;
+      margin-bottom: 8px;
+    }
+
+    .ridge-border {
+      border: 5px ridge #639;
+    }
+
+    .large-font-size {
+      font-size: 36px;
+    }
+
+    .white-background {
+      background-color: white;
+    }
+  </style>
 </head>
 <body>
 
   <h1>Example</h1>
 
-  <div id="classNameMixinExample"></div>
+  <div id="classNameMixinExample0"></div>
+  <div id="classNameMixinExample1"></div>
+  <div id="classNameMixinExample2"></div>
+  <div id="classNameMixinExample3"></div>
 
   <script type="text/jsx">
+    var ExampleComponent = React.createClass({
+      mixins: [ClassNameMixin],
+
+      render: function() {
+        return (
+          <div className={this.getCombinedClassNames('example-component')}>This is our example!</div>
+        );
+      }
+    });
+
     React.render(
-      <HelloWorld />,
-      document.getElementById('classNameMixinExample')
+      <ExampleComponent />,
+      document.getElementById('classNameMixinExample0')
+    );
+
+    React.render(
+      <ExampleComponent className="ridge-border" />,
+      document.getElementById('classNameMixinExample1')
+    );
+
+    React.render(
+      <ExampleComponent className={{'ridge-border': true, 'large-font-size': true, 'white-background': false}} />,
+      document.getElementById('classNameMixinExample2')
+    );
+
+    React.render(
+      <ExampleComponent className={{'ridge-border': true, 'example-component': false}} />,
+      document.getElementById('classNameMixinExample3')
     );
   </script>
 
